objects/Sales_Line_Detail__c/Sales_Line_Detail__c.object-meta.xml
<CustomObject>
    <label>Sales Line Detail</label>
    <nameField>
        <displayFormat>SLD-{0000000}</displayFormat>
        <label>Sales Line Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Line Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>