objects/Sales_Line_Detail__c/fields/Day_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Day_Rate_Code__c</fullName>
    <label>Day Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REG</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>