objects/Sales_Line_Detail__c/fields/Line_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Cost__c</fullName>
    <label>Line Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>