objects/Sales_Line_Detail__c/fields/Overtime_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Unit_Cost__c</fullName>
    <description>T22710 - Labor hourly unit cost calculation enhancement</description>
    <label>Overtime Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>