objects/Sales_Line_Detail__c/fields/Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Premium_Rate__c</fullName>
    <label>Double Time Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>