objects/Sales_Line_Detail__c/fields/Regular_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Regular_Unit_Cost__c</fullName>
    <description>T22710 - Labor hourly unit cost calculation enhancement</description>
    <label>Regular Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>