objects/Sales_Line_Detail__c/fields/Sales_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Line__c</fullName>
    <label>Sales Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>Sales Line Details</relationshipLabel>
    <relationshipName>Sales_Line_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>