objects/Sales_Line_Detail__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Sales Line Details</relationshipLabel>
    <relationshipName>Sales_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>