objects/Sales_Line_Detail__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Week Number</label>
    <referenceTo>Week_Number__c</referenceTo>
    <relationshipLabel>Sales Line Details</relationshipLabel>
    <relationshipName>Sales_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>